tests/negative/ImportCycle/C.mjuvix
module C;
import D;
end;